--- a/12-sql+analysis/sql.ipynb
+++ b/12-sql+analysis/sql.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### В этом проекте запросы по sql я делал в тренажере яндекса, доступа к таблицам у меня нет, для наглядности своей работы я сделал такой костыль (код запроса и ниже фота результата из тренажера)"
+    "#### В этом проекте запросы по sql я делал в тренажере яндекса, доступа к БД у меня нет, для наглядности своей работы я сделал такой 'костыль' (код запроса и ниже фота результата из тренажера)"
    ]
   },
   {
