--- a/12-sql+analysis/sql.ipynb
+++ b/12-sql+analysis/sql.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### В этом проекте запросы по sql я делал в тренажере яндекса, доступа к БД у меня нет, для наглядности своей работы я сделал такой 'костыль' (код запроса и ниже фота результата из тренажера)"
+    "#### В этом проекте запросы по sql я делал в тренажере яндекса, доступа к БД у меня нет, для наглядности своей работы я сделал такой 'костыль' (код запроса и ниже скрин результата из тренажера)"
    ]
   },
   {
@@ -21,7 +21,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Найдите количество рейсов на каждой модели самолёта с вылетом в сентябре 2018 года. Назовите получившееся поле flights_amount и выведите его. Также напечатайте на экране поле model. Столбцы в таблице должны быть выведены в следующем порядке:\n",
+    "### Найдите количество рейсов на каждой модели самолёта с вылетом в сентябре 2018 года. Назовите получившееся поле flights_amount и выведите его. Также напечатайте на экране поле model. Столбцы в таблице должны быть выведены в следующем порядке:\n",
     "\n",
     "    model\n",
     "    flights_amount"
